--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="version1/src/js/main.js" type="MIME"></script>
 </body>
+
+
 </html>
